--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gopeak",
-  "version": "2.0.0",
-  "mcpName": "io.github.had0yun/gopeak",
+  "version": "2.0.1",
+  "mcpName": "io.github.HaD0Yun/gopeak",
   "description": "GoPeak — The most comprehensive MCP server for Godot Engine. 95+ tools: scene management, GDScript LSP diagnostics, DAP debugger, screenshot capture, input injection, ClassDB introspection, CC0 asset library. AI-assisted game development with Claude, Cursor, Cline, OpenCode.",
   "type": "module",
   "main": "./build/index.js",
