--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "0.6.0",
+    "@modelcontextprotocol/sdk": "^1.27.0",
     "axios": "^1.7.9",
     "fs-extra": "^11.2.0"
   },
