--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc && node scripts/build.js",
+    "build": "tsc && node scripts/build-visualizer.js && node scripts/build.js",
     "prepare": "npm run build",
     "watch": "tsc --watch",
     "inspector": "npx @modelcontextprotocol/inspector build/index.js",
@@ -27,10 +27,13 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.27.0",
     "axios": "^1.7.9",
-    "fs-extra": "^11.2.0"
+    "fs-extra": "^11.2.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
+    "@types/ws": "^8.5.12",
+    "esbuild": "^0.24.0",
     "typescript": "^5.3.3"
   },
   "license": "MIT",
